// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should return checkout info 1`] = `
{
  "billing": {
    "canceled": false,
    "credit_balance": "0",
    "ends_at": null,
    "has_historical_subscriptions": false,
    "has_pm": true,
    "id": "1",
    "interval": "monthly",
    "next_pm_date": "2020-01-01",
    "next_pm_discounts": [],
    "next_pm_subtotal": "0",
    "next_pm_tax": "0",
    "next_pm_taxes": [],
    "next_pm_total": "0",
    "on_grace_period": false,
    "on_trial": false,
    "plan": "publisher",
    "plan_id": "1",
    "pm_last_four": "0000",
    "pm_type": "visa",
    "publications_count": 1,
    "publications_quota": 99,
    "quantity": 1,
    "referer": null,
    "seats_in_use": 1,
    "source": "stripe",
    "subscribed": true,
    "trial_ends_at": null,
  },
  "checkPaidRole": [Function],
  "checkoutFrom": "",
  "checkoutMode": "standard",
  "closeDialog": [Function],
  "doneCheckout": [Function],
  "groupKey": "blogger",
  "isFreePlan": false,
  "isOpen": false,
  "isPlusPlan": true,
  "loading": false,
  "loadingBilling": false,
  "openDialog": [Function],
  "planStatus": "Subscribed",
  "refetchBilling": [Function],
  "requirePlusPlan": [Function],
}
`;

exports[`should warn for unknown plan 1`] = `
{
  "billing": {
    "canceled": false,
    "credit_balance": "0",
    "ends_at": null,
    "has_historical_subscriptions": false,
    "has_pm": true,
    "id": "1",
    "interval": "monthly",
    "next_pm_date": "2020-01-01",
    "next_pm_discounts": [],
    "next_pm_subtotal": "0",
    "next_pm_tax": "0",
    "next_pm_taxes": [],
    "next_pm_total": "0",
    "on_grace_period": false,
    "on_trial": false,
    "plan": "unknown",
    "plan_id": "1",
    "pm_last_four": "0000",
    "pm_type": "visa",
    "publications_count": 1,
    "publications_quota": 99,
    "quantity": 1,
    "referer": null,
    "seats_in_use": 1,
    "source": "stripe",
    "subscribed": true,
    "trial_ends_at": null,
  },
  "checkPaidRole": [Function],
  "checkoutFrom": "",
  "checkoutMode": "standard",
  "closeDialog": [Function],
  "doneCheckout": [Function],
  "groupKey": "blogger",
  "isFreePlan": true,
  "isOpen": false,
  "isPlusPlan": false,
  "loading": false,
  "loadingBilling": false,
  "openDialog": [Function],
  "planStatus": "Free",
  "refetchBilling": [Function],
}
`;
